register and login pages UIs redesigned

--- a/src/components/misc/Navbar.styles.scss
+++ b/src/components/misc/Navbar.styles.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: flex-end;
     height: 50px;
+    background-color: var(--light-green-outline);
+
     ul {
         display: flex;
 
