--- a/src/components/misc/Navbar.styles.scss
+++ b/src/components/misc/Navbar.styles.scss
@@ -4,12 +4,64 @@
     height: 50px;
     background-color: var(--light-green-outline);
 
+    /*Container for menu button  */
+    .menu-button-container {
+        display: none;
+        height: 100%;
+        width: 30px;
+        cursor: pointer;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #menu-toggle {
+        display: none;
+    }
+    
+    .menu-button {
+        top: 2.5%;
+        right: 2%;
+    }
+
+    /*  Creating the menu button */
+    .menu-button,
+    .menu-button::before,
+    .menu-button::after {
+        display: block;
+        background-color: #fff;
+        position: absolute;
+        height: 3px;
+        width: 32px;
+        border-radius: 3px;
+    }
+    
+    .menu-button::before {
+    content: '';
+        margin-top: -8px;
+    }
+    
+    .menu-button::after {
+    content: '';
+        margin-top: 8px;
+    }
+
     ul {
         display: flex;
 
         li {
             list-style-type: none;
             padding: 1rem;
+        }
+    }
+
+    @media screen and (max-width: 1000px) {
+        .menu-button-container {
+            display: block;
+        }
+
+        ul {
+            display: none;
         }
     }
 }
