--- a/src/components/Home.styles.scss
+++ b/src/components/Home.styles.scss
@@ -82,7 +82,36 @@
             padding: 2rem;
         }
     }
+}
 
+@media screen and (max-width: 1200px) {
+    .home-wrapper {
+        padding-bottom: 1rem;
+
+        .recipes-wrapper {
+            flex-direction: column;
+            width: 100%;
+            align-items: center;
+    
+            .recipe-item-container {
+                width: 80%;
+                height: 30rem;
+    
+                h2, p {
+                    text-align: center;
+                }
+    
+                .image-wrapper {
+                    height: 60%;
+                }
+    
+                .details-wrapper {
+                    height: 40%;
+                    justify-content: center;
+                }
+            }
+        }
+    }
 }
 
 @keyframes slide {
