recipes wrapper styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
 @import url('../src/components/user/RegisterAndLoginWrapper.styles.scss');
 @import url('../src/components/Home.styles.scss');
 @import url('../src/components/recepe/Recipe.styles.scss');
+@import url('../src/components/recepe/RecipeWrapper.styles.scss');
+@import url('../src/components/misc/SearchBar.styles.scss');
 
 $very-light-green: #98C095;
 $light-green-outline: #469856;
