--- a/src/components/recepe/Recipe.styles.scss
+++ b/src/components/recepe/Recipe.styles.scss
@@ -18,6 +18,7 @@
             object-fit: cover; //this prevents stretching of the image
             width: 100%;
             height: 100%;
+            border-radius: 10px 10px 0 0;
         }
     }
 
@@ -28,6 +29,7 @@
         justify-content: start;
         align-items: center;
         gap: 1rem;
+        text-align: center;
 
         button {
             display: inline;
