--- a/src/components/Home.styles.scss
+++ b/src/components/Home.styles.scss
@@ -86,7 +86,7 @@
             gap: 2rem;
             margin-top: 1rem;
             border-radius: 10px;
-            border: 2px solid var(--pastel-blue);
+            // border: 2px solid var(--pastel-blue);
             padding: 2rem;
 
             .recipe-item-container {
