--- a/src/components/misc/SearchBar.styles.scss
+++ b/src/components/misc/SearchBar.styles.scss
@@ -1,19 +1,17 @@
 .search-box-wrapper {
     display: inline-block;
     width: 16rem;
-    height: 1.5rem;
+    height: 2rem;
     border-radius: 7px;
-    margin-top: 1rem;
+    margin: 2rem 0 3.5rem 0;
     outline: 2px solid var(--pastel-blue);
-    position: relative; 
-    left: 50%;
-    transform: translateX(-50%);
+    align-self: center;
 
     .search-input {
         margin: 0;
         padding: 0;
         width: 15rem;
-        height: 1.5rem;
+        height: 2rem;
         border: none;
         margin-left: 3px;
 
@@ -24,7 +22,7 @@
 
     .search-btn {
         position: relative;
-        bottom: 89%;
+        bottom: 80%;
         left: 90%;
         border: none;
         background-color: transparent;
