--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@ $mustard: #B8A237;
 $light-purple: #576296;
 $pastel-blue: #468898;
 $light-pastel-blue: #54a5b9;
+$recipe-card-details-green: #d9f3d7;
 
 :root {
     --very-light-green: #{$very-light-green};
@@ -31,6 +32,7 @@ $light-pastel-blue: #54a5b9;
     --light-purple: #{$light-purple};
     --pastel-blue: #{$pastel-blue};
     --light-pastel-blue:#{$light-pastel-blue};
+    --recipe-card-details-green: #{$recipe-card-details-green};
 }
 
 * {
