--- a/src/components/recepe/Recipe.styles.scss
+++ b/src/components/recepe/Recipe.styles.scss
@@ -1,17 +1,14 @@
 .recipe-item-container {
-    width: 20rem;
-    height: 25rem;
-    background-color: rgb(255 255 255 / 80%);
-    border: 2px solid var(--pastel-blue);
+    width: 25rem;
+    height: 20rem;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 1;
 
     .image-wrapper {
         width: 100%;
-        height: 50%;
+        height: 70%;
         box-sizing: border-box;
 
         img {
@@ -23,30 +20,35 @@
     }
 
     .details-wrapper {
-        height: 40%;
+        height: 30%;
         display: flex;
         flex-direction: column;
-        justify-content: start;
-        align-items: center;
+        align-items: flex-start;
         gap: 1rem;
         text-align: center;
+        color: var(--very-dark-grey);
+        background-color: var(--recipe-card-details-green);
+        border-radius: 0 0 10px 10px;
+        padding: 0 7px;
 
-        button {
-            display: inline;
-            width: 7rem;
-            height: 2rem;
-            border: none;
-            border-radius: 5px;
-            background-color: var(--pastel-blue);
-            color: var(--white);
-            font-size: 1rem;
-            font-weight: bold;
-            letter-spacing: 1px;
-
-            &:hover {
-                background-color: var(--light-pastel-blue);
-                cursor: pointer;
-            }
+        h2 {
+            margin-top: .5rem;
+            font-size: 1.3rem;
+            font-weight: 500;
         }
+
+        p {
+            font-size: 1rem;
+        }
+
+        h2, p {
+            user-select: none;
+        }
+    }
+
+    &:hover {
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+        transition: ease-in-out 400ms;
+        cursor: pointer;
     }
 }
