--- a/src/components/recepe/RecipeWrapper.styles.scss
+++ b/src/components/recepe/RecipeWrapper.styles.scss
@@ -6,7 +6,7 @@
 }
 
 .loaded-recipes-container {
-    color: var(--pastel-blue);
+    color: var(--light-green-outline);
     @include flexColumnCentered;
 
     .recipes-container {
@@ -27,14 +27,14 @@
             height: 2rem;
             border: none;
             border-radius: 5px;
-            background-color: var(--pastel-blue);
+            background-color: var(--light-green-outline);
             color: var(--white);
             font-size: 1rem;
             font-weight: bold;
             letter-spacing: 1px;
 
             &:hover {
-                background-color: var(--light-pastel-blue);
+                background-color: var(--lighter-green-outline);
                 cursor: pointer;
             }
         }
