changed search bar outline color

--- a/src/components/misc/SearchBar.styles.scss
+++ b/src/components/misc/SearchBar.styles.scss
@@ -4,7 +4,7 @@
     height: 2rem;
     border-radius: 7px;
     margin: 2rem 0 3.5rem 0;
-    outline: 2px solid var(--pastel-blue);
+    outline: 2px solid var(--very-light-green);
     align-self: center;
 
     .search-input {
