increased recipe description length and changed the details background color

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@ $mustard: #B8A237;
 $light-purple: #576296;
 $pastel-blue: #468898;
 $light-pastel-blue: #54a5b9;
-$recipe-card-details-green: #d9f3d7;
+$recipe-card-details-green: #e0ede6;
 
 :root {
     --very-light-green: #{$very-light-green};
