--- a/src/components/recepe/RecipeDetailsWrapper.styles.scss
+++ b/src/components/recepe/RecipeDetailsWrapper.styles.scss
@@ -60,7 +60,7 @@
             position: absolute;
             bottom: 4%;
             right: 0%;
-            width: 35rem;
+            min-width: 35rem;
             height: 6rem;
             padding: 1rem;
             background-color: #fbfffb;
@@ -120,7 +120,6 @@
 }
 
 @media screen and (max-width: 1400px) {
-    //here we move the title a bit up
     .recipe-details-wrapper {
         header {
             .recipe-title-container {
@@ -132,5 +131,84 @@
 }
 
 @media screen and (max-width: 900px) {
-    //here the title looses its relativeness and goes below the image
+    .recipe-details-wrapper {
+        header,
+        main {
+            width: 90%;
+        }
+
+        header {
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+
+            .recipe-title-container {
+                position: unset;
+                width: 100%;
+            }
+        }
+
+        main {
+            .prep-details {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .prep-description {
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 2rem;
+
+                .ingredients ,
+                .instructions {
+                    width: 80%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 630px) {
+    .recipe-details-wrapper {
+        .edit-recipe-btn {
+            z-index: 1;
+            top: .1%;
+        }
+
+        header,
+        main {
+            width: 95%;
+            padding: 0;
+        }
+
+        header {
+            .recipe-img-container {
+                width: 100%;
+                position: unset;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            .recipe-title-container {
+                width: 95%;
+                min-width: unset;
+
+                h2 {
+                    text-align: center;
+                }
+            }
+        }
+
+        main {
+            .prep-details {
+                padding: 1rem;
+            }
+        }
+    }
 }
