added new colors and renamed the add recipe component

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import url('../src/components/recepe/RecipeWrapper.styles.scss');
 @import url('../src/components/misc/SearchBar.styles.scss');
 @import url('../src/components/recepe/RecipeDetailsWrapper.styles.scss');
+@import url('../src/components/recepe/AddRecipe.styles.scss');
 
 $very-light-green: #98C095;
 $light-green-outline: #469856;
@@ -20,6 +21,7 @@ $pastel-blue: #468898;
 $light-pastel-blue: #54a5b9;
 $recipe-card-details-green: #e0ede6;
 $light-yellow: #e1c745;
+$dark-yellow: #d3c14b;
 
 :root {
     --very-light-green: #{$very-light-green};
@@ -36,6 +38,7 @@ $light-yellow: #e1c745;
     --light-pastel-blue:#{$light-pastel-blue};
     --recipe-card-details-green: #{$recipe-card-details-green};
     --light-yellow: #{$light-yellow};
+    --dark-yellow: #{$dark-yellow};
 }
 
 * {
@@ -50,7 +53,7 @@ html, body {
 
 #root {
     background-color: $white;
-    color: #F1FAFF;
+    color: var(--very-dark-grey);
     font-family: "Roboto", sans-serif;
     height: 100%;
     width: 100%;
