small fix for image

--- a/src/components/recepe/RecipeDetailsWrapper.styles.scss
+++ b/src/components/recepe/RecipeDetailsWrapper.styles.scss
@@ -53,6 +53,7 @@
             img {
                 width: 25rem;
                 height: 25rem;
+                object-fit: cover;
             }
         }
 
