initial UI for edit recipe modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 @import url('../src/components/recepe/RecipeDetailsWrapper.styles.scss');
 @import url('../src/components/recepe/AddRecipe.styles.scss');
 @import url('../src/components/user/MyAccount.styles.scss');
+@import url('../src/components/recepe/EditRecipeModal.styles.scss');
 
 $very-light-green: #98C095;
 $light-green-outline: #469856;
