--- a/src/components/recepe/EditRecipeModal.styles.scss
+++ b/src/components/recepe/EditRecipeModal.styles.scss
@@ -28,6 +28,15 @@
                 margin-bottom: 10px;
             }
 
+            img {
+                width: 100%;
+                height: 20rem;
+                object-fit: contain;
+                margin: auto;
+                margin-bottom: 1rem;
+                border-radius: 20px;
+            }
+
             input,
             textarea {
                 width: 100%;
@@ -101,5 +110,13 @@
 @media screen and (max-width: 700px) {
     .edit-recipe-modal {
         width: 80%;
+
+        form {
+            div {
+                img {
+                    height: unset;
+                }
+            }
+        }
     }
 }
