--- a/src/App.scss
+++ b/src/App.scss
@@ -47,6 +47,7 @@ $very-light-gray: #98979757;
 
 * {
     margin: 0;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -61,8 +62,6 @@ html, body {
     font-family: "Roboto", sans-serif;
     height: 100%;
     width: 100%;
-
-
 }
 
 .spinner {
