--- a/src/components/Home.styles.scss
+++ b/src/components/Home.styles.scss
@@ -107,6 +107,7 @@
             gap: 2rem;
             margin-top: 1rem;
             width: 100%;
+            justify-content: center;
 
             .details-wrapper {
                 p {
