--- a/src/components/recipe/AddRecipe.styles.scss
+++ b/src/components/recipe/AddRecipe.styles.scss
@@ -28,13 +28,18 @@
             }
         }
 
+        input.errorOutline,
+        textarea.errorOutline {
+            border: 2px solid var(--error-red);
+        }
+
         .image-wrapper {
             position: relative;
 
             img {
                 width: 100%;
                 height: 20rem;
-                object-fit: cover;
+                object-fit: contain;
                 border: 2px solid var(--white);
             }
 
@@ -46,12 +51,16 @@
                 width: 50%;
                 height: 1.5rem;
                 border: none;
-                padding: .5rem;
+                padding: 1rem;
                 border: 2px solid var(--very-light-green);
 
                 &:focus {
                     outline: none;
                 }
+            }
+
+            input.errorOutline {
+                border: 2px solid var(--error-red);
             }
         }
 
@@ -74,6 +83,7 @@
                 input {
                     width: 70%;
                     height: 1.5rem;
+                    padding: .8rem;
                 }
             }
 
@@ -107,6 +117,10 @@
                     &:focus {
                         outline: none;
                     }
+                }
+
+                select.errorOutline {
+                    border: 2px solid var(--error-red);
                 }
             }
         }
