edit recipe complete

--- a/src/components/recipe/EditRecipeModal.styles.scss
+++ b/src/components/recipe/EditRecipeModal.styles.scss
@@ -50,6 +50,11 @@
                 }
             }
 
+            input.errorOutline,
+            textarea.errorOutline {
+                border: 2px solid var(--error-red);
+            }
+
             textarea {
                 min-height: 5rem;
                 resize: vertical;
