--- a/src/components/Home.styles.scss
+++ b/src/components/Home.styles.scss
@@ -8,7 +8,7 @@
     .inner-container {
         width: 100%;
         height: 40rem;
-        background-image: url('images/vegetables-white.jpg');
+        background-image: url('/images/vegetables-white.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
