--- a/src/components/recipe/RecipeDetailsWrapper.styles.scss
+++ b/src/components/recipe/RecipeDetailsWrapper.styles.scss
@@ -109,7 +109,7 @@
             .instructions {
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                justify-content: flex-start;
                 align-items: center;
 
                 h3 {
