--- a/src/components/user/RegisterAndLoginWrapper.styles.scss
+++ b/src/components/user/RegisterAndLoginWrapper.styles.scss
@@ -9,7 +9,7 @@
     }
 
     .left-wrapper {
-        background-image: url('images/vegetable-pattern.jpg');
+        background-image: url('/images/vegetable-pattern.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -72,6 +72,8 @@
                 color: var(--light-grey);
                 margin-bottom: 10px;
                 display: flex;
+                flex-direction: column;
+                gap: .3rem;
                 justify-content: space-between;
             }
     
@@ -80,6 +82,7 @@
                 border-radius: 3px;
                 height: 50px;
                 margin-bottom: 1.5rem;
+                font-size: 1.3rem;
             }
 
             .inputErrorOutline {
@@ -89,7 +92,7 @@
 
             #errorMsg {
                 color: var(--error-red);
-                align-self: flex-end;
+                // align-self: flex-end;
             }
 
             input[type='submit'] {
