--- a/src/components/misc/SearchBar.styles.scss
+++ b/src/components/misc/SearchBar.styles.scss
@@ -23,12 +23,16 @@
     .search-btn {
         position: relative;
         bottom: 80%;
-        left: 90%;
+        left: 83%;
         border: none;
         background-color: transparent;
 
         &:hover {
             cursor: pointer;
         }
+    }
+
+    .clear-btn {
+        left: 80%;
     }
 }
