--- a/src/components/recipe/RecipeDetailsWrapper.styles.scss
+++ b/src/components/recipe/RecipeDetailsWrapper.styles.scss
@@ -7,7 +7,7 @@
     color: var(--very-dark-grey);
     padding-top: 2rem;
     padding-bottom: 4rem;
-    height: 100%;
+    height: fit-content;
     width: 100%;
     font-family: "Merienda", cursive;
     position: relative;
@@ -114,6 +114,97 @@
 
                 h3 {
                     margin-bottom: 1rem;
+                }
+            }
+        }
+
+        .comments-setion_wrapper {
+            margin-top: 2.5rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            hr {
+                width: 100%;
+                margin-bottom: .7rem;
+                border: 1px solid var(--light-green-outline);
+            }
+
+            .comments-user-input {
+                display: flex;
+                flex-direction: column;
+                gap: .5rem;
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+                // padding: 1rem;
+                margin-bottom: 1rem;
+
+                textarea {
+                    width: 100%;
+                    height: 5rem;
+                    font-size: 1rem;
+                    border: 1px solid var(--light-green-outline);
+                    resize: none;
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
+
+                .comments-buttons-container {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    gap: .5rem;
+
+                    button {
+                        display: inline-block;
+                        width: 7rem;
+                        height: 2rem;
+                        border: none;
+                        border-radius: 5px;
+                        color: var(--white);
+                        font-size: 1rem;
+                        font-weight: 700;
+                        padding: .4rem;
+                        background-color: var(--light-green-outline);
+
+                        &:hover {
+                            cursor: pointer;
+                            background-color: var(--lighter-green-outline);
+                        }
+                    }
+                }
+            }
+
+            .comments-contents {
+                // margin-top: 1rem;
+                width: 100%;
+                padding: 1rem;
+                margin: 1rem;
+                border: 1px solid var(--light-green-outline);
+
+                section {
+                    display: flex;
+                    flex-direction: column-reverse;
+
+                    .comment-content {
+                        display: flex;
+                        gap: .4rem;
+                        justify-content: space-between;
+                        padding: .3rem 0;
+
+                        .content-text {
+                            max-width: 60%;
+                            overflow-wrap: anywhere;
+                        }
+                    }
+                }
+
+                .none-added {
+                    text-align: center;
                 }
             }
         }
